--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -2489,6 +2489,7 @@
   "Send_request_on_lead_capture": "Send request on lead capture",
   "Send_request_on_offline_messages": "Send Request on Offline Messages",
   "Send_request_on_visitor_message": "Send Request on Visitor Messages",
+  "Send_sms_with_mobex": "Send SMS with Mobex",
   "Send_Test": "Send Test",
   "Send_Visitor_navigation_history_as_a_message": "Send Visitor Navigation History as a Message",
   "Send_visitor_navigation_history_on_request": "Send Visitor Navigation History on Request",
