Added to number [ci skip]

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -2491,6 +2491,9 @@
   "Send_request_on_visitor_message": "Send Request on Visitor Messages",
   "Send_sms_with_mobex": "Send SMS with Mobex",
   "Send_sms_with_mobex_description": "Select a number and send sms to anyone",
+  "Send_sms_with_mobex_to_number": "To",
+  "Send_sms_with_mobex_to_number_placeholder": "Number to send (e.g. 9991234567)",
+  "Send_sms_with_mobex_to_number_not_valid": "Not a valid number",
   "Send_Test": "Send Test",
   "Send_Visitor_navigation_history_as_a_message": "Send Visitor Navigation History as a Message",
   "Send_visitor_navigation_history_on_request": "Send Visitor Navigation History on Request",
