--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -2491,7 +2491,7 @@
   "Send_request_on_visitor_message": "Send Request on Visitor Messages",
   "Send_sms_with_mobex": "Send SMS with Mobex",
   "Send_sms_with_mobex_description": "Select a number and send sms to anyone",
-  "Send_sms_with_mobex_to_number": "To",
+  "Send_sms_with_mobex_to_number": "Send to",
   "Send_sms_with_mobex_to_number_placeholder": "Number to send (e.g. 9991234567)",
   "Send_sms_with_mobex_to_number_not_valid": "Not a valid number",
   "Send_Test": "Send Test",
