Added csv upload option to sendSMS [ci skip]

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -2496,6 +2496,8 @@
   "Send_sms_with_mobex_text_description": "Messages may be longer that 160 characters but will count as more than one message for billing purposes",
   "Send_sms_with_mobex_to_number": "Send to",
   "Send_sms_with_mobex_to_number_description": "Enter a single number, multiple numbers separated by a comma",
+  "Send_sms_with_mobex_to_number_csv": "or upload csv file",
+  "Send_sms_with_mobex_to_number_csv_description": "The file to upload should have comma seperated numbers and .csv extension",
   "Send_sms_with_mobex_to_number_placeholder": "Number to send (e.g. 9991234567)",
   "Send_sms_with_mobex_to_number_not_valid": "Not a valid number",
   "Send_Test": "Send Test",
