--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -2490,12 +2490,13 @@
   "Send_request_on_offline_messages": "Send Request on Offline Messages",
   "Send_request_on_visitor_message": "Send Request on Visitor Messages",
   "Send_sms_with_mobex": "Send SMS with Mobex",
-  "Send_sms_with_mobex_success": "SMS sent successfully.",
+  "Send_sms_with_mobex_char_count": "Character count:",
+  "Send_sms_with_mobex_description": "Select a number and send sms to anyone",
   "Send_sms_with_mobex_error": "An error occured while sending SMS",
   "Send_sms_with_mobex_error_to_num": "Number to send is invalid. Look at the example.",
   "Send_sms_with_mobex_error_text": "SMS text is empty!",
-  "Send_sms_with_mobex_description": "Select a number and send sms to anyone",
   "Send_sms_with_mobex_from": "From",
+  "Send_sms_with_mobex_success": "SMS sent successfully.",
   "Send_sms_with_mobex_text": "Message",
   "Send_sms_with_mobex_text_description": "Messages may be longer than 160 characters but will count as more than one message for billing purposes",
   "Send_sms_with_mobex_to_number": "Send to",
