Changed Jasmin to Mobex, added batch option [ci skip]

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -1601,12 +1601,14 @@
   "It_works": "It works",
   "italic": "Italic",
   "italics": "italics",
-  "Jasmin_sms_gateway_address": "Jasmin SMS Gateway Address",
-  "Jasmin_sms_gateway_address_desc": "IP or Host of your Jasmin service with specified port. E.g. `http://192.168.1.1:1401` or `https://www.example.com:1401`",
-  "Jasmin_sms_gateway_from_number": "From",
-  "Jasmin_sms_gateway_from_number_desc": "Originating address/phone number",
-  "Jasmin_sms_gateway_password": "Password",
-  "Jasmin_sms_gateway_username": "Username",
+  "Mobex_sms_gateway_address": "Mobex SMS Gateway Address",
+  "Mobex_sms_gateway_address_desc": "IP or Host of your Mobex service with specified port. E.g. `http://192.168.1.1:1401` or `https://www.example.com:1401`",
+  "Mobex_sms_gateway_from_number": "From",
+  "Mobex_sms_gateway_from_number_desc": "Originating address/phone number",
+  "Mobex_sms_gateway_password": "Password",
+  "Mobex_sms_gateway_restful_address": "Mobex SMS REST API Address",
+  "Mobex_sms_gateway_restful_address_desc": "IP or Host of your Mobex REST API. E.g. `http://192.168.1.1:8080` or `https://www.example.com:8080`",
+  "Mobex_sms_gateway_username": "Username",
   "Jitsi_Chrome_Extension": "Chrome Extension Id",
   "Jitsi_Enable_Channels": "Enable in Channels",
   "Job_Title": "Job Title",
