Setting number list from the admin page done

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -1604,7 +1604,9 @@
   "Mobex_sms_gateway_address": "Mobex SMS Gateway Address",
   "Mobex_sms_gateway_address_desc": "IP or Host of your Mobex service with specified port. E.g. `http://192.168.1.1:1401` or `https://www.example.com:1401`",
   "Mobex_sms_gateway_from_number": "From",
-  "Mobex_sms_gateway_from_number_desc": "Originating address/phone number",
+  "Mobex_sms_gateway_from_number_desc": "Originating address/phone number when sending a new SMS to livechat client",
+  "Mobex_sms_gateway_from_numbers_list": "List of numbers to send SMS from",
+  "Mobex_sms_gateway_from_numbers_list_desc": "Comma-separated list of numbers to use in sending brand new messages, eg. 123456789, 123456788, 123456888",
   "Mobex_sms_gateway_password": "Password",
   "Mobex_sms_gateway_restful_address": "Mobex SMS REST API Address",
   "Mobex_sms_gateway_restful_address_desc": "IP or Host of your Mobex REST API. E.g. `http://192.168.1.1:8080` or `https://www.example.com:8080`",
@@ -2495,6 +2497,7 @@
   "Send_sms_with_mobex_char_count": "Character count:",
   "Send_sms_with_mobex_description": "Select a number and send sms to anyone",
   "Send_sms_with_mobex_error": "An error occured while sending SMS",
+  "Send_sms_with_mobex_error_from_number_list": "An error occured while getting number list",
   "Send_sms_with_mobex_error_to_num": "Given number or uploaded file is invalid. Look at the descriptions.",
   "Send_sms_with_mobex_error_text": "SMS text is empty!",
   "Send_sms_with_mobex_from": "From",
