Receiving SMS to a private group channel

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -642,6 +642,7 @@
   "Copy_to_clipboard": "Copy to clipboard",
   "COPY_TO_CLIPBOARD": "COPY TO CLIPBOARD",
   "could-not-access-webdav": "Could not access WebDAV",
+  "Could_not_create_department_channel": "Could not create a channel for this department. Try again later.",
   "Count": "Count",
   "Counters": "Counters",
   "Country": "Country",
