Single-instance-multiple-orgs changes, Mobex SMS service and SMS sender

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -672,6 +672,7 @@
   "Copy_to_clipboard": "Copy to clipboard",
   "COPY_TO_CLIPBOARD": "COPY TO CLIPBOARD",
   "could-not-access-webdav": "Could not access WebDAV",
+  "Could_not_create_department_channel": "Could not create a channel for this department. Try again later.",
   "Count": "Count",
   "Counters": "Counters",
   "Country": "Country",
@@ -2073,6 +2074,16 @@
   "minutes": "minutes",
   "Mobile": "Mobile",
   "Mobile_Notifications_Default_Alert": "Mobile Notifications Default Alert",
+  "Mobex_sms_gateway_address": "Mobex SMS Gateway Address",
+  "Mobex_sms_gateway_address_desc": "IP or Host of your Mobex service with specified port. E.g. `http://192.168.1.1:1401` or `https://www.example.com:1401`",
+  "Mobex_sms_gateway_from_number": "From",
+  "Mobex_sms_gateway_from_number_desc": "Originating address/phone number when sending a new SMS to livechat client",
+  "Mobex_sms_gateway_from_numbers_list": "List of numbers to send SMS from",
+  "Mobex_sms_gateway_from_numbers_list_desc": "Comma-separated list of numbers to use in sending brand new messages, eg. 123456789, 123456788, 123456888",
+  "Mobex_sms_gateway_password": "Password",
+  "Mobex_sms_gateway_restful_address": "Mobex SMS REST API Address",
+  "Mobex_sms_gateway_restful_address_desc": "IP or Host of your Mobex REST API. E.g. `http://192.168.1.1:8080` or `https://www.example.com:8080`",
+  "Mobex_sms_gateway_username": "Username",
   "Monday": "Monday",
   "Mongo_version": "Mongo Version",
   "Mongo_storageEngine": "Mongo Storage Engine",
@@ -2629,6 +2640,23 @@
   "Send_your_JSON_payloads_to_this_URL": "Send your JSON payloads to this URL.",
   "Sending": "Sending...",
   "Sent_an_attachment": "Sent an attachment",
+  "Send_sms_with_mobex": "Send SMS with Mobex",
+  "Send_sms_with_mobex_char_count": "Character count:",
+  "Send_sms_with_mobex_description": "Select a number and send sms to anyone",
+  "Send_sms_with_mobex_error": "An error occured while sending SMS",
+  "Send_sms_with_mobex_error_from_number_list": "An error occured while getting number list",
+  "Send_sms_with_mobex_error_to_num": "Given number or uploaded file is invalid. Look at the descriptions.",
+  "Send_sms_with_mobex_error_text": "SMS text is empty!",
+  "Send_sms_with_mobex_from": "From",
+  "Send_sms_with_mobex_success": "SMS sent successfully.",
+  "Send_sms_with_mobex_text": "Message",
+  "Send_sms_with_mobex_text_description": "(Messages may be longer than 160 characters but will count as more than one message for billing purposes)",
+  "Send_sms_with_mobex_to_number": "Send to",
+  "Send_sms_with_mobex_to_number_description": "Enter a single number or multiple numbers separated by comma",
+  "Send_sms_with_mobex_to_number_csv": "Or upload csv file with numbers",
+  "Send_sms_with_mobex_to_number_csv_description": "The file to upload should have new line seperated numbers (put numbers in first column) and .csv extension",
+  "Send_sms_with_mobex_to_number_placeholder": "Number to send (e.g. 9991234567)",
+  "Send_sms_with_mobex_to_number_not_valid": "Not a valid number",
   "Served_By": "Served By",
   "Server_Info": "Server Info",
   "Server_Type": "Server Type",
