--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -3087,6 +3087,7 @@
   "User_logged_out": "User is logged out",
   "User_management": "User Management",
   "User_mentions_only": "User mentions only",
+  "User_messages_updated_successfully": "User messages updated successfully",
   "User_muted": "User Muted",
   "User_muted_by": "User <em>__user_muted__</em> muted by <em>__user_by__</em>.",
   "User_not_found": "User not found",
