--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -2688,6 +2688,12 @@
   "Technology_Provider": "Technology Provider",
   "Technology_Services": "Technology Services",
   "Telecom": "Telecom",
+  "Teli_sms_token": "Teli token",
+  "Teli_sms_token_desc": "The API token generated on your Teli account dashboard",
+  "Teli_sms_from_number": "From",
+  "Teli_sms_from_number_desc": "Your Teli number",
+  "Teli_sms_gateway_restful_address": "Teli API Address",
+  "Teli_sms_gateway_restful_address_desc": "For example: `https://sms.teleapi.net`",
   "Test_Connection": "Test Connection",
   "Test_Desktop_Notifications": "Test Desktop Notifications",
   "Thank_you_exclamation_mark": "Thank you!",
