ADD - Mobex MMS to the settings and the SMS sender page

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -2079,6 +2079,7 @@
   "Mobex_sms_gateway_from_number": "From",
   "Mobex_sms_gateway_from_number_desc": "Originating address/phone number when sending a new SMS to livechat client",
   "Mobex_sms_gateway_from_numbers_list": "List of numbers to send SMS from",
+  "Mobex_sms_gateway_from_numbers_list_mms": "List of numbers to send SMS/MMS from",
   "Mobex_sms_gateway_from_numbers_list_desc": "Comma-separated list of numbers to use in sending brand new messages, eg. 123456789, 123456788, 123456888",
   "Mobex_sms_gateway_password": "Password",
   "Mobex_sms_gateway_restful_address": "Mobex SMS REST API Address",
@@ -2647,6 +2648,7 @@
   "Send_sms_with_mobex_error_from_number_list": "An error occured while getting number list",
   "Send_sms_with_mobex_error_to_num": "Given number or uploaded file is invalid. Look at the descriptions.",
   "Send_sms_with_mobex_error_text": "SMS text is empty!",
+  "Send_mms_with_mobex_error_text": "Please attach a file in order to send MMS!",
   "Send_sms_with_mobex_from": "From",
   "Send_sms_with_mobex_success": "SMS sent successfully.",
   "Send_sms_with_mobex_text": "Message",
@@ -2655,6 +2657,10 @@
   "Send_sms_with_mobex_to_number_description": "Enter a single number or multiple numbers separated by comma",
   "Send_sms_with_mobex_to_number_csv": "Or upload csv file with numbers",
   "Send_sms_with_mobex_to_number_csv_description": "The file to upload should have new line seperated numbers (put numbers in first column) and .csv extension",
+  "Send_mms_with_mobex_file": "Or send MMS by uploading a file",
+  "Send_mms_with_mobex_file_description": "Please note:",
+  "Send_mms_with_mobex_file_description_1": "1. In order to send MMS, you must configure Mobex MMS beforehand",
+  "Send_mms_with_mobex_file_description_2": "2. If you send MMS, the message text won't be sent",
   "Send_sms_with_mobex_to_number_placeholder": "Number to send (e.g. 9991234567)",
   "Send_sms_with_mobex_to_number_not_valid": "Not a valid number",
   "Served_By": "Served By",
@@ -2836,6 +2842,12 @@
   "Technology_Provider": "Technology Provider",
   "Technology_Services": "Technology Services",
   "Telecom": "Telecom",
+  "Teli_sms_token": "Mobex MMS token",
+  "Teli_sms_token_desc": "The API token generated on your Mobex MMS account dashboard",
+  "Teli_sms_from_number": "From",
+  "Teli_sms_from_number_desc": "Your Mobex MMS number",
+  "Teli_sms_gateway_restful_address": "Mobex MMS API Address",
+  "Teli_sms_gateway_restful_address_desc": "For example: `https://sms.teleapi.net`",
   "Test_Connection": "Test Connection",
   "Test_Desktop_Notifications": "Test Desktop Notifications",
   "Thank_you_exclamation_mark": "Thank you!",
